kubernetes/apps/longhorn-system/longhorn/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui-internal
  namespace: longhorn-system
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https

  hostnames:
    - "longhorn.internal.${SECRET_DOMAIN}"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: longhorn-frontend
          port: 80
          namespace: longhorn-system
